# UUAGC-Examples

./: .gitignore  LICENSE  README.md
examples/01-pure/: Readme.md  Setup.hs  uuagc-pure.cabal
examples/01-pure/src/: Main.hs
examples/01-pure/src/AG/: Attributes.ag  HelperFuncs.ag
examples/02-applied/: Readme.md  uuagc-applied.cabal  uuagc_options
examples/02-applied/src/: Expression.hs  Main.hs
examples/02-applied/src/AG/: DataTypes.ag  PrettyPrint.ag
examples/03-manual/: Readme.md  uuagc-manual.cabal  uuagc_options
examples/03-manual/src/: Main.hs
examples/03-manual/src/AG/: Example1.ag  Example2.ag  Example3.ag  Example4.ag  Example5.ag
examples/pure/: Readme.md  uuagc-pure.cabal  uuagc_options
examples/pure/src/AG/: DataTypes.ag
